// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:iframe 1`] = `
<div>
  <iframe
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__IFrame b-a"
    frameborder="0"
    src="https://www.baidu.com"
    style="width: 500px; height: 500px;"
  />
</div>
`;

exports[`Renderer:iframe-escape 1`] = `
<div>
  <iframe
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__IFrame b-a"
    frameborder="0"
    src="https://www.baidu.com/?s=%25f"
    style="width: 500px; height: 500px;"
  />
</div>
`;

exports[`Renderer:iframe-var 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <iframe
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__IFrame b-a"
            frameborder="0"
            src="https://www.baidu.com"
            style="width: 500px; height: 500px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
